fix abstract spacing

--- a/src/styles/_node-abstracts.scss
+++ b/src/styles/_node-abstracts.scss
@@ -1,4 +1,9 @@
 .surface.content .nodes > .content-node {
+  
+  &.text.abstract_title_hr {
+    padding-bottom: 0px;
+    padding-top: 0px;
+  }
   &.text.abstract-heading {
     font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
@@ -27,11 +32,21 @@
   &.text.abstract-text {
     font-size: 16px;
     padding-bottom: 0px;
-    padding-top: 0px;
+    padding-top: 15px;
+  }
+
+  &.text.abstract-kwd-heading {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 16px;
+    padding-bottom: 0px;
+    padding-top: 15px;
   }
 
   &.text.abstract-kwd {
     font-family: 'Noto Sans', sans-serif;
+    padding-bottom: 20px;
+    padding-top: 0px;
+
   }
 } 
 
